--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.12'
+	// id 'org.springframework.boot' version '3.4.12'
+	id 'org.springframework.boot' version '3.5.7'
+	//【Versionが古いと、lombok関係はエラーが起こりやすいため注意！】
+	//今回は、Lemgthのimport文が出てこなかった。探して追加したimport文が異なっていたため、探せずエラーが出ていた。
 	id 'io.spring.dependency-management' version '1.1.7'
 }
+
 
 group = 'in.tech_camp'
 version = '0.0.1-SNAPSHOT'
