画像保存の実装

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/chatapp
 spring.datasource.username= ina
 spring.datasource.password= M_ina
 spring.flyway.baselineOnMigrate=true
+
+spring.servlet.multipart.max-file-size=10MB
+  # アップロードするファイルの最大サイズを制限
+spring.servlet.multipart.max-request-size=10MB
+  # HTTPリクエスト全体の最大サイズを制限
+image.url=src/main/resources/static/uploads
+  # 画像を保存するディレクトリのパスを示す設定
